# PackingTool.Core/Service/PackingList/Json/Item/PackingItemType.cs
@@ -1,0 +1,15 @@
+﻿namespace PackingTool.Core.Service.PackingList.Json.Item
+{
+    public enum PackingItemType
+    {
+        Undefined,
+        Cloth,
+        Electronics,
+        Food,
+        Documents,
+        Shoes,
+        Cosmetics,
+        Medicaments,
+        Other
+    }
+}
